# stories_web_ar

./: .env.example  .gitignore  .htaccess  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  BUILD_SUCCESS.md  CLAUDE.md  Capfile  DEPLOYMENT.md  DEPLOY_README.md  FILES_CREATED.md  Gemfile  HOW_TO_BUILD.txt  IMPLEMENTATION_SUMMARY.md  OBFUSCATION.md  OPENCV_SETUP.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  README_ULTRA.md  START_HERE.md  VIDEO_OVERLAY_README.md  WASM_README.md  build.js  build.sh  config.js  deploy.config.example  deploy.sh  imageTracker.js  index-wasm.html  index.html  manifest.json  nginx-opencv.conf  package-lock.json  package.json  start-server.sh  styles.css  sw.js  target_database.json  test_database_load.html
config/: deploy.rb
debug/: CUSTOM_CONFIG_EXAMPLES.md  CustomExperimentConfigs.js  DebugExperimentRunner.js  DebugReportGenerator.js  DebugVisualizer.js  ExperimentConfigs.js  HYPERPARAMETER_SEARCH.md  README.md  debug-custom.html  debug-detection.html
wasm/: .gitignore  CMakeLists-manual.txt.backup  CMakeLists-simple.txt  CMakeLists-test.txt  CMakeLists.txt  CMakeLists.txt.backup  build-opencv.sh  build-simple.sh  build-test.sh  build.sh  download-opencv.sh  setup-opencv.sh  test_tracking  test_tracking.cpp
wasm/build-test/: Makefile
wasm/include/: ar_engine.hpp  feature_detector.hpp  memory_pool.hpp  optical_flow_tracker.hpp  target_manager.hpp
wasm/opencv/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
wasm/src/: api.cpp  ar_engine.cpp  feature_detector.cpp  memory_pool.cpp  optical_flow_tracker.cpp  target_manager.cpp
(+34 files in other folders)
